--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 /node_modules
 /public/hot
-
+/public
 /storage/*.key
 /.idea
-
+/vendor
 /.vscode
 /.vagrant
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-
+.env
 .phpunit.result.cache
