cambio en los parametros de conexion

--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_DATABASE=db_patrimonio
 DB_USERNAME=postgres
-DB_PASSWORD=postgres
+DB_PASSWORD=DAVID
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
